# PlaceToHorror

./: .gitignore  CMakeLists.txt  CONTRIBUITING.md  MYRULES.md  README.md
docs/: DESICIONS.md  newBranches.md  weeklyProgress.md
docs/concepts/weeklyConcepts/: Semana1.md
docs/conceptsCpp/: ciclos.md  clases.md  funciones.md
docs/refactors/: refactor.md
include/components/: Transform.hpp
include/core/: Engine.hpp  Input.hpp  Window.hpp
include/ecs/entities/: Entity.hpp  Player.hpp
include/entities/: Entity.hpp  Player.hpp
include/managers/: EntityManager.hpp  ErrorManager.hpp  EventManager.hpp  UIManager.hpp
include/ui/: UIElement.hpp  UIStructs.hpp
include/ui/components/: UIButton.hpp  button.hpp
src/: Main.cpp
src/core/: Engine.cpp  Input.cpp  Window.cpp
src/ecs/entities/: Player.cpp
src/entities/: Player.cpp
src/managers/: EntityManager.cpp  EventManager.cpp  UIManager.cpp
src/ui/: UIElement.cpp
src/ui/components/: Button.cpp  UIButton.cpp
